[project]
name = "ai-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu==1.11.0.post1",
    "fastapi>=0.121.3",
    "langchain==0.3.27",
    "langchain-cli[inmem]>=0.0.37",
    "langchain-community==0.3.27",
    "langchain-core==0.3.72",
    "langchain-groq==0.3.6",
    "langgraph==0.6.4",
    "langsmith==0.4.8",
    "python-box==7.3.2",
    "pyyaml==6.0.2",
    "streamlit==1.49.1",
    "tavily-python==0.7.10",
    "uvicorn>=0.38.0",
]
